create contact page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md fixed-top navbar-dark">
       <div class="container-xl">
-        <a href="#hero" class="navbar-brand">
+        <a href="#" class="navbar-brand">
           <span class="fw-bold"> Turbine Solutions </span>
         </a>
         <!-- toggle button for mobile nav -->
@@ -46,10 +46,12 @@
               <a href="#projects" class="nav-link">Projects</a>
             </li>
             <li class="nav-item d-md-none">
-              <a href="#contact" class="nav-link">Contact Us</a>
+              <a href="contact.html" class="nav-link">Contact Us</a>
             </li>
             <li class="nav-item ms-2 d-none d-md-inline">
-              <a href="#contact" class="btn btn-info text-white">Contact Us</a>
+              <a href="contact.html" class="btn btn-info text-white"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </div>
@@ -66,10 +68,9 @@
             maxime dolor aliquam, molestiae saepe est explicabo inventore soluta
             tempore
           </p>
-
-          <button type="button" class="btn btn-info text-white btn-md px-4">
+          <a href="contact.html" class="btn btn-info text-white btn-md px-4">
             Get In Touch!
-          </button>
+          </a>
         </div>
       </div>
     </section>
@@ -247,54 +248,99 @@
           <div class="col-lg-4 my-2 m-md-0">
             <div class="item">
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
-              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+              <span
+                ><i
+                  class="fas fa-plus"
+                  data-bs-toggle="modal"
+                  data-bs-target="#projectmodal"
+                ></i
+              ></span>
             </div>
           </div>
 
           <div class="col-lg-4 my-2 m-md-0">
             <div class="item">
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
-              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+              <span
+                ><i
+                  class="fas fa-plus"
+                  data-bs-toggle="modal"
+                  data-bs-target="#projectmodal"
+                ></i
+              ></span>
             </div>
           </div>
 
           <div class="col-lg-4 my-2 m-md-0">
             <div class="item">
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
-              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+              <span
+                ><i
+                  class="fas fa-plus"
+                  data-bs-toggle="modal"
+                  data-bs-target="#projectmodal"
+                ></i
+              ></span>
             </div>
           </div>
           <!-- second row of images -->
           <div class="col-lg-4 my-2 m-md-0 pt-md-4">
             <div class="item">
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
-              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+              <span
+                ><i
+                  class="fas fa-plus"
+                  data-bs-toggle="modal"
+                  data-bs-target="#projectmodal"
+                ></i
+              ></span>
             </div>
           </div>
           <div class="col-lg-4 my-2 m-md-0 pt-md-4">
             <div class="item">
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
-              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+              <span
+                ><i
+                  class="fas fa-plus"
+                  data-bs-toggle="modal"
+                  data-bs-target="#projectmodal"
+                ></i
+              ></span>
             </div>
           </div>
           <div class="col-lg-4 my-2 m-md-0 pt-md-4">
             <div class="item">
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
-              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+              <span
+                ><i
+                  class="fas fa-plus"
+                  data-bs-toggle="modal"
+                  data-bs-target="#projectmodal"
+                ></i
+              ></span>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <div class="project-modal modal fade mt-5" id="projectmodal" aria-hidden="true" role="dialog">
+    <div
+      class="project-modal modal fade mt-5"
+      id="projectmodal"
+      aria-hidden="true"
+      role="dialog"
+    >
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content text-center">
           <div class="modal-body text-center">
             <div class="container-fluid p-0">
               <div class="row justify-content-center">
                 <div class="col-lg-12">
-                  <img src="images/king-air.jpg" class="img-fluid rounded "alt="">
+                  <img
+                    src="images/king-air.jpg"
+                    class="img-fluid rounded"
+                    alt=""
+                  />
                 </div>
               </div>
             </div>
@@ -302,12 +348,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
 
     <!-- FOOTER -->
     <footer class="text-center bg-altdark text-white pt-1">
