--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turbine Solutions - Contact Us</title>
     <link rel="stylesheet" href="css/main.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
   <body>
     <!-- NAV -->
@@ -88,10 +89,11 @@
               <div class="row">
                 <i
                   class="
-                    fa-sharp fa-solid fa-location-dot fa-2x
+                  bi bi-geo-alt
+                  h3
                     text-altdark
                     col-1
-                    g-1
+                    g-md-1
                   "
                 ></i>
                 <div class="col-9 ps-3">
@@ -102,7 +104,7 @@
         
               <div class="row">
                 <i
-                  class="fa-solid fa-envelope fa-2x text-altdark g-1 col-1"
+                  class="bi bi-envelope text-altdark g-md-1 col-1 h3"
                 ></i>
                 <div class="col-9 ps-3">
                   <h4 class="text-altdark">Email:</h4>
@@ -112,10 +114,11 @@
               <div class="row">
                 <i
                   class="
-                    fa-sharp fa-solid fa-phone fa-2x
+                  bi bi-telephone
+                  h3
                     text-altdark
                     col-1
-                    g-1
+                    g-md-1
                   "
                 ></i>
                 <div class="col-9 ps-3">
@@ -250,15 +253,15 @@
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-3">Contact</h6>
             <p>
-              <i class="fa-solid fa-location-dot text-secondary me-2"></i> New
+              <i class="bi bi-geo-alt-fill text-secondary me-2"></i> New
               York, NY 10012, US
             </p>
             <p>
-              <i class="fas fa-envelope me-2 text-secondary"></i>
+              <i class="bi bi-envelope-fill me-2 text-secondary"></i>
               info@example.com
             </p>
             <p>
-              <i class="fas fa-phone me-2 text-secondary"></i> + 01 234 567 88
+              <i class="bi bi-telephone-fill me-2 text-secondary"></i> + 01 234 567 88
             </p>
           </div>
           <!-- /Grid column -->
@@ -283,10 +286,6 @@
     ></script>
     <!-- custom JS -->
     <script src="custom.js"></script>
-    <!-- font awesome icons -->
-    <script
-      src="https://kit.fontawesome.com/581a84b058.js"
-      crossorigin="anonymous"
-    ></script>
+
   </body>
 </html>
