--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turbine Solutions</title>
     <link rel="stylesheet" href="css/main.min.css" type="text/css" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <link href="images/icons8-airplane-96.png" rel="icon" />
   </head>
   <body style="min-height: 200vh">
@@ -250,7 +253,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="fas fa-plus"
+                  class="bi bi-fullscreen"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -263,7 +266,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="fas fa-plus"
+                  class="bi bi-fullscreen"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -276,7 +279,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="fas fa-plus"
+                  class="bi bi-fullscreen"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -289,7 +292,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="fas fa-plus"
+                  class="bi bi-fullscreen"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -301,7 +304,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="fas fa-plus"
+                  class="bi bi-fullscreen"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -313,7 +316,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="fas fa-plus"
+                  class="bi bi-fullscreen"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -414,15 +417,15 @@
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-3">Contact</h6>
             <p>
-              <i class="fa-solid fa-location-dot text-secondary me-2"></i> New
+              <i class="bi bi-geo-alt-fill text-secondary me-2"></i> New
               York, NY 10012, US
             </p>
             <p>
-              <i class="fas fa-envelope me-2 text-secondary"></i>
+              <i class="bi bi-envelope-fill me-2 text-secondary"></i>
               info@example.com
             </p>
             <p>
-              <i class="fas fa-phone me-2 text-secondary"></i> + 01 234 567 88
+              <i class="bi bi-telephone-fill me-2 text-secondary"></i> + 01 234 567 88
             </p>
           </div>
           <!-- /Grid column -->
@@ -447,10 +450,5 @@
     ></script>
     <!-- custom JS -->
     <script src="custom.js"></script>
-    <!-- font awesome icons -->
-    <script
-      src="https://kit.fontawesome.com/581a84b058.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
