--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turbine Solutions - Contact Us</title>
     <link rel="stylesheet" href="css/main.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <!-- NAV -->
@@ -83,46 +86,30 @@
           ></iframe>
         </div>
 
-        <div class="row mt-5 mx-1">
+        <div class="row mt-5 ">
           <div class="col-lg-4">
             <div class="info">
               <div class="row">
-                <i
-                  class="
-                  bi bi-geo-alt
-                  h3
-                    text-altdark
-                    col-1
-                    g-md-1
-                  "
-                ></i>
-                <div class="col-9 ps-3">
-                  <h4 class="text-altdark">Address:</h4>
-                  <p class="text-info">200 Barry Whatley Way, Airport 6A2, Griffin, GA 30224</p>
+                <i class="bi bi-geo-alt h3 text-altdark col-1 gy-1 g-md-1 text-center"></i>
+                <div class="col-11 col-md-9 ps-3">
+                  <h4 class="text-altdark mb-1">Address:</h4>
+                  <p class="text-info ">
+                    200 Barry Whatley Way, Airport 6A2, Griffin, GA 30224
+                  </p>
                 </div>
               </div>
-        
+
               <div class="row">
-                <i
-                  class="bi bi-envelope text-altdark g-md-1 col-1 h3"
-                ></i>
+                <i class="bi bi-envelope text-altdark g-md-1 gy-1 col-1 h3 text-center"></i>
                 <div class="col-9 ps-3">
-                  <h4 class="text-altdark">Email:</h4>
+                  <h4 class="text-altdark mb-1">Email:</h4>
                   <p class="text-info">info@example.com</p>
                 </div>
               </div>
               <div class="row">
-                <i
-                  class="
-                  bi bi-telephone
-                  h3
-                    text-altdark
-                    col-1
-                    g-md-1
-                  "
-                ></i>
+                <i class="bi bi-telephone h3 text-altdark col-1 g-md-1 gy-1 text-center"></i>
                 <div class="col-9 ps-3">
-                  <h4 class="text-altdark">Call:</h4>
+                  <h4 class="text-altdark mb-1">Call:</h4>
                   <p class="text-info">+1 5589 55488 55s</p>
                 </div>
               </div>
@@ -253,15 +240,16 @@
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-3">Contact</h6>
             <p>
-              <i class="bi bi-geo-alt-fill text-secondary me-2"></i> New
-              York, NY 10012, US
+              <i class="bi bi-geo-alt-fill text-secondary me-2"></i> New York,
+              NY 10012, US
             </p>
             <p>
               <i class="bi bi-envelope-fill me-2 text-secondary"></i>
               info@example.com
             </p>
             <p>
-              <i class="bi bi-telephone-fill me-2 text-secondary"></i> + 01 234 567 88
+              <i class="bi bi-telephone-fill me-2 text-secondary"></i> + 01 234
+              567 88
             </p>
           </div>
           <!-- /Grid column -->
@@ -272,7 +260,7 @@
       <!-- Copyright -->
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1)">
         &copy <span id="currentYear">2023</span>
-        <a class="text-reset fw-bold" href="#">Turbine Solutions</a>
+        <a class="text-reset fw-bold" href="index.html">Turbine Solutions</a>
       </div>
       <!-- Copyright -->
     </footer>
@@ -286,6 +274,5 @@
     ></script>
     <!-- custom JS -->
     <script src="custom.js"></script>
-
   </body>
 </html>
