--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       <!-- Copyright -->
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1)">
         &copy <span id="currentYear">2023</span>
-        <a class="text-reset fw-bold" href="#">Turbine Solutions</a>
+        <a class="text-reset fw-bold" href="index.html">Turbine Solutions</a>
       </div>
       <!-- Copyright -->
     </footer>
