--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3337.579408303247!2d-84.27770968480654!3d33.225120980838966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f48b68d5cfa76d%3A0x92444a0b61d22409!2sTurbine%20Solutions!5e0!3m2!1sen!2sus!4v1685144221204!5m2!1sen!2sus"
             width="100%"
-            height="300"
+            height="280"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
@@ -86,31 +86,31 @@
           ></iframe>
         </div>
 
-        <div class="row mt-5 ">
+        <div class="row mt-5 px-2 px-md-0">
           <div class="col-lg-4">
             <div class="info">
               <div class="row">
-                <i class="bi bi-geo-alt h3 text-altdark col-1 gy-1 g-md-1 text-center"></i>
+                <i class="bi bi-geo-alt h3 text-info col-1 gy-1 g-md-1 text-center"></i>
                 <div class="col-11 col-md-9 ps-3">
                   <h4 class="text-altdark mb-1">Address:</h4>
-                  <p class="text-info ">
+                  <p>
                     200 Barry Whatley Way, Airport 6A2, Griffin, GA 30224
                   </p>
                 </div>
               </div>
 
               <div class="row">
-                <i class="bi bi-envelope text-altdark g-md-1 gy-1 col-1 h3 text-center"></i>
+                <i class="bi bi-envelope text-info g-md-1 gy-1 col-1 h3 text-center"></i>
                 <div class="col-9 ps-3">
                   <h4 class="text-altdark mb-1">Email:</h4>
-                  <p class="text-info">info@example.com</p>
+                  <p>info@example.com</p>
                 </div>
               </div>
               <div class="row">
-                <i class="bi bi-telephone h3 text-altdark col-1 g-md-1 gy-1 text-center"></i>
+                <i class="bi bi-telephone h3 text-info col-1 g-md-1 gy-1 text-center"></i>
                 <div class="col-9 ps-3">
                   <h4 class="text-altdark mb-1">Call:</h4>
-                  <p class="text-info">+1 5589 55488 55s</p>
+                  <p>+1 5589 55488 55s</p>
                 </div>
               </div>
             </div>
@@ -164,7 +164,7 @@
                     type="submit"
                     name="submit"
                     id="submit"
-                    class="btn btn-primary btn-block m-2"
+                    class="btn btn-info text-light btn-block m-2"
                     value="Send"
                   />
                 </div>
@@ -221,7 +221,7 @@
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-3">Browse</h6>
             <p>
-              <a href="#" class="text-light">Home</a>
+              <a href="index.html" class="text-light">Home</a>
             </p>
             <p>
               <a href="#!" class="text-light">About Us</a>
