--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Hero Section-->
     <section id="hero" class="text-white pt-4">
       <div class="text-center container-fluid">
-        <h1 class="display-5 fw-bold">Lorem ipsum dolor sit amet.</h1>
+        <h1 class=" display-5 fw-semibold  ">Lorem ipsum dolor sit amet.</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
@@ -253,7 +253,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="bi bi-fullscreen"
+                  class="bi bi-arrows-angle-expand"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -266,7 +266,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="bi bi-fullscreen"
+                  class="bi bi-arrows-angle-expand"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -279,7 +279,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="bi bi-fullscreen"
+                  class="bi bi-arrows-angle-expand"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -292,7 +292,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="bi bi-fullscreen"
+                  class="bi bi-arrows-angle-expand"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -304,7 +304,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="bi bi-fullscreen"
+                  class="bi bi-arrows-angle-expand"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
@@ -316,7 +316,7 @@
               <img src="images/king-air.jpg" alt="" class="img-fluid" />
               <span
                 ><i
-                  class="bi bi-fullscreen"
+                  class="bi bi-arrows-angle-expand"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
