add breadcrumbs to contact subpage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body style="min-height: 200vh">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark ">
       <div class="container-xl">
         <a href="#" class="navbar-brand">
           <span class="fw-bold"> Turbine Solutions </span>
@@ -62,7 +62,7 @@
     </nav>
 
     <!-- Hero Section-->
-    <section id="hero" class="text-white pt-4">
+    <section id="hero" class="text-white pt-4 ">
       <div class="text-center container-fluid">
         <h1 class=" display-5 fw-semibold  ">Lorem ipsum dolor sit amet.</h1>
         <div class="col-lg-6 mx-auto">
@@ -78,7 +78,6 @@
       </div>
     </section>
 
-    <!-- SERVICES -->
     <section id="services" class="bg-white py-5">
       <div class="container-lg">
         <div class="text-center">
@@ -90,10 +89,10 @@
 
         <div class="row row-cols-1 row-cols-md-3 g-4 py-4">
           <div class="col">
-            <div class="card border-0 shadow rounded-0">
+            <div class="card border-0 shadow ">
               <img
                 src="images/cockpit-6381367_1920.jpg"
-                class="card-img-top rounded-0"
+                class="card-img-top "
                 alt="..."
               />
               <div class="card-body">
@@ -107,10 +106,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 shadow rounded-0">
+            <div class="card border-0 shadow">
               <img
                 src="images/turbine-590354_1920.jpg"
-                class="card-img-top rounded-0"
+                class="card-img-top "
                 alt="..."
               />
               <div class="card-body">
@@ -122,10 +121,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 shadow rounded-0">
+            <div class="card border-0 shadow ">
               <img
                 src="images/biplane-ga1cc6382f_1920.jpg"
-                class="card-img-top rounded-0"
+                class="card-img-top "
                 alt="..."
               />
               <div class="card-body">
@@ -139,10 +138,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 shadow rounded-0">
+            <div class="card border-0 shadow ">
               <img
                 src="images/engine-gbcdd1ad48_1920.jpg"
-                class="card-img-top rounded-0"
+                class="card-img-top "
                 alt="..."
               />
               <div class="card-body">
@@ -156,10 +155,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 shadow rounded-0">
+            <div class="card border-0 shadow ">
               <img
                 src="images/main-landing-gear-1461139.jpg"
-                class="card-img-top rounded-0"
+                class="card-img-top "
                 alt="..."
               />
               <div class="card-body">
@@ -173,10 +172,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 shadow rounded-0">
+            <div class="card border-0 shadow ">
               <img
                 src="images/airplane-905532_1920.jpg"
-                class="card-img-top rounded-0"
+                class="card-img-top "
                 alt="..."
               />
               <div class="card-body">
@@ -192,6 +191,7 @@
         </div>
       </div>
     </section>
+
 
     <!-- ABOUT US  -->
     <section id="about" class="py-5 bg-light">
@@ -250,14 +250,15 @@
         <div class="row pt-4">
           <div class="col-lg-4 my-2 m-md-0">
             <div class="item">
-              <img src="images/king-air.jpg" alt="" class="img-fluid" />
+              <img src="images/plane-g789d69c97_1920.jpg" alt="" class="img-fluid" />
               <span
                 ><i
                   class="bi bi-arrows-angle-expand"
                   data-bs-toggle="modal"
                   data-bs-target="#projectmodal"
                 ></i
-              ></span>
+              >
+            </span>
             </div>
           </div>
 
@@ -326,7 +327,7 @@
         </div>
       </div>
     </section>
-
+<!-- modals for porject gallery -->
     <div
       class="project-modal modal fade mt-5"
       id="projectmodal"
@@ -335,7 +336,7 @@
     >
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content text-center">
-          <div class="modal-body text-center">
+          <div class="modal-body text-center ">
             <div class="container-fluid p-0">
               <div class="row justify-content-center">
                 <div class="col-lg-12">
@@ -351,6 +352,13 @@
         </div>
       </div>
     </div>
+
+
+
+
+
+
+   
 
     <!-- FOOTER -->
     <footer class="text-center bg-altdark text-white pt-1">
