--- a/contact.html
+++ b/contact.html
@@ -72,6 +72,20 @@
       </div>
     </section>
 
+    <div class="container-fluid pt-3 pb-1 bg-light ">
+      <div class="container-lg">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html" class="text-info">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">
+              Contact
+            </li>
+          </ol>
+        </nav>
+      </div>
+   
+    </div>
+
     <section id="contact" class="contact py-5">
       <div class="container">
         <div>
@@ -119,7 +133,7 @@
           <div class="col-lg-8 mt-5 mt-lg-0">
             <form action="" method="post" role="form" class="">
               <div class="row gy-2 gx-md-3">
-                <div class="col-md-6 form-group">
+                <div class="col-md-6 form-group my-2">
                   <input
                     type="text"
                     name="name"
@@ -129,7 +143,7 @@
                     required=""
                   />
                 </div>
-                <div class="col-md-6 form-group">
+                <div class="col-md-6 form-group my-2">
                   <input
                     type="email"
                     class="form-control"
@@ -139,7 +153,7 @@
                     required=""
                   />
                 </div>
-                <div class="form-group col-12">
+                <div class="form-group col-12 my-2">
                   <input
                     type="text"
                     class="form-control"
@@ -149,7 +163,7 @@
                     required=""
                   />
                 </div>
-                <div class="form-group col-12">
+                <div class="form-group col-12 my-2">
                   <textarea
                     class="form-control"
                     name="message"
@@ -159,13 +173,13 @@
                   ></textarea>
                 </div>
 
-                <div class="text-center col-12">
+                <div class="text-center col-12 my-2">
                   <input
                     type="submit"
                     name="submit"
                     id="submit"
                     class="btn btn-info text-light btn-block m-2"
-                    value="Send"
+                    value="Send Message"
                   />
                 </div>
               </div>
