update image gallery section

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="index.html#projects" class="nav-link">Projects</a>
+              <a href="index.html#projects" class="nav-link">Gallery</a>
             </li>
             <li class="nav-item d-md-none">
               <a href="contact.html" class="nav-link">Contact Us</a>
@@ -241,7 +241,7 @@
               <a href="#!" class="text-light">About Us</a>
             </p>
             <p>
-              <a href="#!" class="text-light">Projects</a>
+              <a href="#!" class="text-light">Gallery</a>
             </p>
             <p>
               <a href="#!" class="text-light">Services</a>
