--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,9 @@
         >
           <ul class="navbar-nav gap-2">
             <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
               <a href="index.html#services" class="nav-link">Services</a>
             </li>
             <li class="nav-item">
@@ -72,18 +75,17 @@
       </div>
     </section>
 
-    <div class="container-fluid pt-3 pb-1 bg-light ">
+    <div class="container-fluid pt-3 pb-1 bg-light">
       <div class="container-lg">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html" class="text-info">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">
-              Contact
+            <li class="breadcrumb-item">
+              <a href="index.html" class="text-info">Home</a>
             </li>
+            <li class="breadcrumb-item active" aria-current="page">Contact</li>
           </ol>
         </nav>
       </div>
-   
     </div>
 
     <section id="contact" class="contact py-5">
@@ -104,24 +106,52 @@
           <div class="col-lg-4">
             <div class="info">
               <div class="row">
-                <i class="bi bi-geo-alt h3 text-info col-1 gy-1 g-md-1 text-center"></i>
+                <i
+                  class="
+                    bi bi-geo-alt
+                    h3
+                    text-info
+                    col-1
+                    gy-1
+                    g-md-1
+                    text-center
+                  "
+                ></i>
                 <div class="col-11 col-md-9 ps-3">
                   <h4 class="text-altdark mb-1">Address:</h4>
-                  <p>
-                    200 Barry Whatley Way, Airport 6A2, Griffin, GA 30224
-                  </p>
+                  <p>200 Barry Whatley Way, Airport 6A2, Griffin, GA 30224</p>
                 </div>
               </div>
 
               <div class="row">
-                <i class="bi bi-envelope text-info g-md-1 gy-1 col-1 h3 text-center"></i>
+                <i
+                  class="
+                    bi bi-envelope
+                    text-info
+                    g-md-1
+                    gy-1
+                    col-1
+                    h3
+                    text-center
+                  "
+                ></i>
                 <div class="col-9 ps-3">
                   <h4 class="text-altdark mb-1">Email:</h4>
                   <p>info@example.com</p>
                 </div>
               </div>
               <div class="row">
-                <i class="bi bi-telephone h3 text-info col-1 g-md-1 gy-1 text-center"></i>
+                <i
+                  class="
+                    bi bi-telephone
+                    h3
+                    text-info
+                    col-1
+                    g-md-1
+                    gy-1
+                    text-center
+                  "
+                ></i>
                 <div class="col-9 ps-3">
                   <h4 class="text-altdark mb-1">Call:</h4>
                   <p>+1 5589 55488 55s</p>
@@ -189,96 +219,89 @@
       </div>
     </section>
 
-    <!-- FOOTER -->
-    <footer class="text-center bg-altdark text-white pt-1">
-      <div class="container text-center text-md-start mt-5">
-        <!-- Grid row -->
-        <div class="row">
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-5 col-xl-3 mb-4">
-            <!-- Content -->
-            <h6 class="text-uppercase fw-bold mb-3 mx-auto">
-              Turbine Solutions
-            </h6>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consequatur laudantium aspernatur aliquid, quibusdam quis facere.
-            </p>
+    <section>
+      <!-- Footer -->
+      <footer class="bg-altdark text-white text-center pt-4">
+        <!-- Grid container -->
+        <div class="container p-4">
+          <!--Grid row-->
+          <div class="row">
+            <!--Grid column-->
+            <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+              <h6 class="text-uppercase fw-bold mb-3 mx-auto">
+                Turbine Solutions
+              </h6>
 
-            <i class="fa-brands fa-facebook-f mx-1"></i>
-            <i class="fa-brands fa-linkedin mx-1"></i>
-            <i class="fa-brands fa-instagram mx-1"></i>
-          </div>
-          <!-- /Grid column -->
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste
+                atque ea quis molestias. Fugiat pariatur maxime quis culpa
+                corporis vitae repudiandae aliquam voluptatem veniam, est atque
+                cumque eum delectus sint!
+              </p>
+              <i class="bi bi-facebook mx-1"></i>
+              <i class="bi bi-linkedin mx-1"></i>
+              <i class="bi bi-instagram mx-1"></i>
+            </div>
+            <!--Grid column-->
 
-          <!-- Grid column -->
-          <div class="col-2 col-md-2 col-lg-2 col-xl-2 mb-4 mx-auto">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-3">Services</h6>
-            <p>
-              <a href="#!" class="text-light">Link</a>
-            </p>
-            <p>
-              <a href="#!" class="text-light">Link</a>
-            </p>
-            <p>
-              <a href="#!" class="text-light">Link</a>
-            </p>
-            <p>
-              <a href="#!" class="text-light">Link</a>
-            </p>
-          </div>
-          <!-- /Grid column -->
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h6 class="text-uppercase fw-bold">Browse</h6>
 
-          <!-- Grid column -->
-          <div class="col-2 col-md-3 col-lg-2 col-xl-2 mb-4 mx-auto">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-3">Browse</h6>
-            <p>
-              <a href="index.html" class="text-light">Home</a>
-            </p>
-            <p>
-              <a href="#!" class="text-light">About Us</a>
-            </p>
-            <p>
-              <a href="#!" class="text-light">Gallery</a>
-            </p>
-            <p>
-              <a href="#!" class="text-light">Services</a>
-            </p>
-          </div>
-          <!-- /Grid column -->
+              <ul class="list-unstyled mb-0">
+                <li class="py-1">
+                  <a href="index.html" class="text-white">Home</a>
+                </li>
+                <li class="py-1">
+                  <a href="index.html#services" class="text-white">Services</a>
+                </li>
+                <li class="py-1">
+                  <a href="index.html#about" class="text-white">About Us</a>
+                </li>
+                <li class="py-1">
+                  <a href="index.html#projects" class="text-white">Gallery</a>
+                </li>
+              </ul>
+            </div>
+            <!--Grid column-->
 
-          <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 col-xl-3 mb-md-0 mb-4 mx-auto">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-3">Contact</h6>
-            <p>
-              <i class="bi bi-geo-alt-fill text-secondary me-2"></i> New York,
-              NY 10012, US
-            </p>
-            <p>
-              <i class="bi bi-envelope-fill me-2 text-secondary"></i>
-              info@example.com
-            </p>
-            <p>
-              <i class="bi bi-telephone-fill me-2 text-secondary"></i> + 01 234
-              567 88
-            </p>
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h6 class="text-uppercase fw-bold">Contact</h6>
+
+              <ul class="list-unstyled">
+                <li class="py-1">
+                  <i class="bi bi-geo-alt-fill text-secondary me-2"></i> New
+                  York, NY 10012, US
+                </li>
+                <li class="py-1">
+                  <i class="bi bi-envelope-fill me-2 text-secondary"></i>
+                  info@example.com
+                </li>
+                <li class="py-1">
+                  <i class="bi bi-telephone-fill me-2 text-secondary"></i> + 01
+                  234 567 88
+                </li>
+              </ul>
+            </div>
+            <!--Grid column-->
           </div>
-          <!-- /Grid column -->
+          <!--Grid row-->
         </div>
-        <!-- /Grid row -->
-      </div>
+        <!-- Grid container -->
 
-      <!-- Copyright -->
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1)">
-        &copy <span id="currentYear">2023</span>
-        <a class="text-reset fw-bold" href="index.html">Turbine Solutions</a>
-      </div>
-      <!-- Copyright -->
-    </footer>
-    <!-- /Footer -->
+        <!-- Copyright -->
+        <div
+          class="text-center p-3"
+          style="background-color: rgba(0, 0, 0, 0.2)"
+        >
+          &copy <span id="currentYear">2023</span>
+          <a class="text-reset fw-bold" href="index.html">Turbine Solutions</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
+      <!-- Footer -->
+    </section>
 
     <!-- bootstrap js -->
     <script
