--- a/contact.html
+++ b/contact.html
@@ -271,8 +271,7 @@
 
               <ul class="list-unstyled">
                 <li class="py-1">
-                  <i class="bi bi-geo-alt-fill text-secondary me-2"></i> New
-                  York, NY 10012, US
+                  <i class="bi bi-geo-alt-fill text-secondary me-2"></i>200 Barry Whatley Way, Airport 6A2, Griffin, GA 30224
                 </li>
                 <li class="py-1">
                   <i class="bi bi-envelope-fill me-2 text-secondary"></i>
