--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turbine Solutions - Contact Us</title>
     <link rel="stylesheet" href="css/main.min.css" type="text/css" />
+    <link href="images/icons8-airplane-96.png" rel="icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
@@ -208,7 +209,7 @@
                     type="submit"
                     name="submit"
                     id="submit"
-                    class="btn btn-info text-light btn-block m-2"
+                    class="btn btn-info text-white btn-block m-2"
                     value="Send Message"
                   />
                 </div>
